# reservation_system

./: .env  README.md  reservation.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  request.rs  reservation.rs  reservation_query.rs
migrations/: 20230808030800_init.up.sql  20230808034232_reservation.up.sql  20230808034627_trigger.up.sql  20230808034846_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  main.rs  service.rs
sqlx_database_test/src/: lib.rs
