[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std-rustls", "chrono", "postgres", "uuid"] }
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["full"] }

[dev-dependencies]
prost-types = "0.11.9"
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
